# baron-sakender

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
configs/: case1_orszag_tang.txt  case2_strong_magnetic.txt  case3_current_sheet.txt  case4_alfven_wave.txt
examples/: advanced_analysis.py  basic_usage.py
src/baron_sakender/: __init__.py  cli.py
src/baron_sakender/core/: __init__.py  integrator.py  metrics.py  mhd_system.py
src/baron_sakender/io/: __init__.py  config_manager.py  data_handler.py
src/baron_sakender/utils/: __init__.py  logger.py  timer.py
src/baron_sakender/visualization/: __init__.py  animator.py
tests/: __init__.py  conftest.py  test_core.py  test_metrics.py
