[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baron-sakender"
version = "0.0.1"
description = "2D Ideal MHD Simulator using HLL Riemann Solver with Dedner Divergence Cleaning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sandy Hardian Susanto Herho", email = "sandy.herho@email.ucr.edu"}
]
keywords = [
    "MHD",
    "magnetohydrodynamics",
    "plasma physics",
    "computational physics",
    "fluid dynamics",
    "simulation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.20,<2.0",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "pandas>=1.3",
    "tqdm>=4.60",
    "jax>=0.4",
    "jaxlib>=0.4",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12]>=0.4",
]
netcdf = [
    "netCDF4>=1.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "myst-parser>=1.0",
]

[project.scripts]
baron-sakender = "baron_sakender.cli:main"

[project.urls]
Homepage = "https://github.com/sandyherho/baron-sakender"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=baron_sakender --cov-report=term-missing"
